Setting default site

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "username"           : "administrator",
     "password"           : "testunifi12",
     "location"           : "https://172.16.14.100:8443/",
-    "site"               : "Apartmani",
+    "site"               : "b8vx4vaf",
     "sys_admin_username" : "administrator",
     "sys_admin_password" : "testunifi12"
 }
