Adding print option

--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
     "location"           : "https://172.16.14.100:8443/",
     "site"               : "b8vx4vaf",
     "sys_admin_username" : "administrator",
-    "sys_admin_password" : "testunifi12"
+    "sys_admin_password" : "testunifi12",
+    "printer_ip"         : "192.168.88.159"
 }
