--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "art-of-wifi/unifi-api-client": "^1.1",
         "twig/twig" : "^2.0",
-        "kint-php/kint": "2.2"
+        "kint-php/kint": "2.2",
+        "mike42/escpos-php": "*"
     },
     "autoload": {
         "psr-4": {
